--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "map_pwa",
+  "name": "map_poltava",
   "version": "1.0.0",
+  "homepage": "",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -10,10 +11,12 @@
     "cap_init": "npx cap init",
     "cap_android": "npx cap add android",
     "cap_sync": "npx cap sync",
-    "cap_open": "npx cap open android"
+    "cap_open": "npx cap open android",
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run start"
   },
   "dependencies": {
-    "@capacitor/android": "^6.0.0",
+    "@capacitor/android": "6.0.0",
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@nuxtjs/pwa": "^3.3.5",
@@ -27,6 +30,7 @@
     "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
+    "@ionic/cli": "^7.2.0",
     "@nuxtjs/tailwindcss": "^5.3.3",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
