--- a/package.json
+++ b/package.json
@@ -20,20 +20,34 @@
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/style-resources": "^1.2.2",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.12",
+    "bootstrap": "5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "core-js": "^3.25.3",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "nuxt": "^2.15.8",
     "nuxt-leaflet": "^0.0.27",
-    "vue": "^2.7.10",
-    "vue-server-renderer": "^2.7.10",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vue": "^2.7.16",
+    "vue-server-renderer": "^2.7.16",
+    "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.10",
     "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
     "@ionic/cli": "^7.2.0",
-    "@nuxtjs/tailwindcss": "^6.12.0",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "sass": "^1.69.7",
+    "sass-loader": "10"
   }
 }
