--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nuxt-leaflet": "^0.0.27",
     "postcss": "^8.4.38",
     "vue": "^2.7.16",
+    "vue-cool-lightbox": "^2.7.5",
     "vue-server-renderer": "^2.7.16",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.10",
