--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue": "^2.7.16",
     "vue-cool-lightbox": "^2.7.5",
     "vue-server-renderer": "^2.7.16",
+    "vue-slick-carousel": "^1.0.6",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.10",
     "vue2-leaflet": "^2.7.1"
